--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 #map { height: 100%; }
 .info{
    height: 50%;
-   width: 75%;
+   width: 50%;
    position: fixed;
    top: 25%;
+	 left: 25%;
    margin: 0 auto;
    background-color: white;
    z-index: 1;
-   display: none;
+	 display: none;
 }
 body{
 	margin: 0;
