--- a/style.css
+++ b/style.css
@@ -1,15 +1,33 @@
 #map { height: 100%; }
 .info{
-   height: 50%;
-   width: 50%;
+   height: 100%;
+   width: 45%;
    position: fixed;
-   top: 25%;
-	 left: 25%;
+   bottom: 0;
+	 left: 0;
    margin: 0 auto;
-   background-color: white;
+   background-color: rgba(255, 255, 255, 0.5);;
    z-index: 1;
 	 display: none;
 }
+#map > div.leaflet-control-container{
+  display: none;
+}
 body{
 	margin: 0;
+}
+img{
+  width: auto;
+  height: 50%;
+}
+section{
+  display: none;
+}
+nav{
+  position: fixed;
+  z-index: 1;
+  left: 25%;
+  width: 50%;
+  justify-content: center;
+  text-align: center;
 }
