--- a/style.css
+++ b/style.css
@@ -16,9 +16,19 @@ article{
 body{
 	margin: 0;
 }
-img{
-  width: auto;
+article img{
+  max-width: 100%;
   height: 50%;
+}
+article.fullScreen{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  text-align: center;;
+}
+article.fullScreen img{
+  height: 75%;
 }
 section{
   display: none;
