--- a/Parallax-del/parallaxCss.css
+++ b/Parallax-del/parallaxCss.css
@@ -31,11 +31,6 @@ h1 {
    font-size: 250%
 }
 
-#fortsett a{
-  text-decoration: none;
-  color:inherit;
-}
-
 p {
   font-size: 140%;
   line-height: 150%;
@@ -131,4 +126,9 @@ img:last-of-type {
 
 #slide4 {
   background: #222;
+}
+
+#slide4 a{
+    text-decoration: none;
+  color:inherit;
 }
