--- a/kartlinje/style.css
+++ b/kartlinje/style.css
@@ -1,6 +1,7 @@
 body{
 
 }
+/* NB! REVERTER TIL DETTE OM NØDVENDIG!
 article img{
   width: auto;
   height: auto;
@@ -23,20 +24,55 @@ article{
    z-index: 2;
    border-radius: 15px;
 }
+*/
+article img{
+  width: auto;
+  height: auto;
+  max-height: 12em;
+  margin-left: auto;
+  margin-right: auto;
+}
+article{
+   position: absolute;
+    left: 0;
+   top: 65;
+   margin: 0 auto;
+   width: 33%;
+    min-height: 100%;
+   max-height: 100%;
+   overflow-y: auto;
+   /*background-color: rgba(173,	216,	230, 0.75);*/
+    background-color: rgba(255,255,255, 0.75);
+    
+   padding-right: 2%;
+   padding-left: 2%;
+   font-size: 125%;
+   z-index: 2;
+   /*border-radius: 15px;*/
+    border-right: 3px solid black;
+}
+
+article p{
+}
+
+#baaten{
+    width: 100%;
+}
 
 .fullScreen{
-   position: fixed;
+   position: absolute;
    margin: 0 auto;
    padding: 0;
    top: 0;
    width: 100%;
    height: 100%;
+    overflow-y: hidden;
 }
 
 .fullScreen img{
   position: fixed;
   max-height: none;
-  top:0;
+  top:65px;
   left: 0;
   width: auto;
   height: auto;
@@ -47,19 +83,78 @@ header, .fullScreen p{
   z-index: 1;
 }
 
+#navContainer{
+  position: fixed;
+  left:0;
+  top: 0;
+  height:65px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 3;
+}
+
 nav{
   position: absolute;
+  left: 25%;
+  width:50%;
   justify-content: center;
   text-align: center;
-  z-index: 3;
-  width: 40%;
 }
 nav button{
-  background: rgba(255, 255, 255, 0.75);
+  background: rgba(0, 0, 0, 0.0);
   border: none;
-  margin: 1px;
+  margin: 5px;
+  margin-top: 10px;
   font-family: fantasy;
-  font-size: 1em;
+  font-size: 1.85em;
+  color:white;
+  padding: 0;
+}
+
+#forrige{
+  margin-right: 55px;
+}
+
+#miniLogo{
+  position: absolute;
+  top: 10px;
+  left: 50%;
+}
+
+#pop-up{
+    background-color: rgba(0, 0, 0, 0.6);
+    display:none;
+    position:absolute;
+    top:80px;
+    left:40%;
+    height:150px;
+    width: 150px;
+    z-index: 12;
+}
+
+#pop-up:before{
+    content: "";
+    position: absolute;
+  right: 45%;
+    top:-25px;
+  border-left: 13px solid transparent;
+  border-bottom: 26px solid rgba(0, 0, 0, 0.6);
+  border-right: 13px solid transparent;
+}
+#pop-up ul{
+    list-style-type: none;
+    padding:0;
+}
+
+#pop-up ul li{
+    padding-top:5px;
+    border-bottom: 1px solid white;
+    text-align: center;
+    display:block;
+}
+
+#neste{
+  margin-left: 55px;
 }
 
 .leaflet-control-zoom{
