--- a/kartlinje/style.css
+++ b/kartlinje/style.css
@@ -48,13 +48,19 @@ article{
    overflow-y: auto;
    /*background-color: rgba(173,	216,	230, 0.75);*/
     background-color: rgba(255,255,255, 0.75);
-    
+
    padding-right: 2%;
    padding-left: 2%;
    font-size: 125%;
    z-index: 2;
    /*border-radius: 15px;*/
     border-right: 3px solid black;
+}
+
+article#bryggen{
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 article p{
@@ -66,7 +72,7 @@ article p{
 
 .fullScreen{
    position: absolute;
-   margin: 0 auto;
+   margin: 0;
    padding: 0;
    top: 0;
    width: 100%;
@@ -75,13 +81,7 @@ article p{
 }
 
 .fullScreen img{
-  position: fixed;
   max-height: none;
-  top:65px;
-  left: 0;
-  width: auto;
-  height: auto;
-  margin: 0;
 }
 header, .fullScreen p{
   position: relative;
@@ -100,10 +100,13 @@ header, .fullScreen p{
 
 nav{
   position: absolute;
-  left: 25%;
-  width:50%;
+  left: 35%;
+  width:30%;
   justify-content: center;
   text-align: center;
+  align-items: center;
+  padding-top: 5px;
+
 }
 nav button{
   background: rgba(0, 0, 0, 0.0);
@@ -114,37 +117,30 @@ nav button{
   font-size: 1.85em;
   color:white;
   padding: 0;
+  vertical-align: middle;
 }
 
 #forrige{
-  margin-right: 55px;
+  float: left;
+}
+#neste{
+  float: right;
 }
 
 #miniLogo{
-  position: absolute;
-  top: 10px;
-  left: 50%;
+  vertical-align: middle;
+  padding-top: 10px;
+  align-items: center;
+  text-shadow: center
 }
 
 #pop-up{
     background-color: rgba(0, 0, 0, 0.6);
     display:none;
-    position:absolute;
-    top:80px;
-    left:40%;
-    height:150px;
-    width: 150px;
-    z-index: 12;
-}
-
-#pop-up:before{
-    content: "";
-    position: absolute;
-  right: 45%;
-    top:-25px;
-  border-left: 13px solid transparent;
-  border-bottom: 26px solid rgba(0, 0, 0, 0.6);
-  border-right: 13px solid transparent;
+    position:relative;
+    left: 42.5%;
+    width: 20%;
+    z-index: 3;
 }
 #pop-up ul{
     list-style-type: none;
@@ -152,14 +148,15 @@ nav button{
 }
 
 #pop-up ul li{
-    padding-top:5px;
-    border-bottom: 1px solid white;
+    padding:10px;
     text-align: center;
     display:block;
+    text-transform: capitalize;
+    color: white;
 }
-
-#neste{
-  margin-left: 55px;
+#pop-up ul li a{;
+    color: white;
+    text-decoration: none;
 }
 
 .leaflet-control-zoom{
