--- a/kartlinje/style.css
+++ b/kartlinje/style.css
@@ -43,8 +43,7 @@ article{
    top: 65;
    margin: 0 auto;
    width: 40%;
-    min-height: 100%;
-   max-height: 100%;
+   height: calc(100% - 65px);
    overflow-y: auto;
    /*background-color: rgba(173,	216,	230, 0.75);*/
     background-color: rgba(255,255,255, 0.75);
@@ -60,6 +59,7 @@ article{
 /*Styling for enkeltepisoder*/
 article#bryggen{
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
