--- a/kartlinje/style.css
+++ b/kartlinje/style.css
@@ -1,30 +1,5 @@
 body{
 }
-/* NB! REVERTER TIL DETTE OM NØDVENDIG!
-article img{
-  width: auto;
-  height: auto;
-  max-height: 15em;
-  margin-left: auto;
-  margin-right: auto;
-}
-article{
-   position: fixed;
-	 left: 10;
-   top: 50;
-   margin: 0 auto;
-   width: 33%;
-   max-height: 100%;
-   overflow-y: auto;
-   background-color: rgba(173,	216,	230, 0.75);
-   padding-right: 2%;
-   padding-left: 2%;
-   font-size: 125%;
-   z-index: 2;
-   border-radius: 15px;
-}
-*/
-
 html{
     overflow: hidden;
 }
@@ -116,7 +91,7 @@ section video{
    top: 0;
    width: 100%;
    height: 100%;
-    overflow-y: hidden;
+   overflow-y: hidden;
 }
 
 .fullScreen img{
@@ -190,12 +165,18 @@ nav button{
     padding:10px;
     text-align: center;
     display:block;
-    text-transform: capitalize;
     color: white;
 }
-#pop-up ul li a{;
+#pop-up ul li{;
     color: white;
     text-decoration: none;
+}
+#pop-up ul li:hover{;
+    text-decoration: underline;
+    cursor: pointer;
+}
+img#miniLogo:hover{
+  cursor: pointer;
 }
 
 .leaflet-control-zoom{
@@ -257,4 +238,35 @@ h1, h2{
 .fancybox-opened .fancybox-title{
   font-size: 140%;
   font-family: Lora;
+}
+@media screen and (max-width: 770px) {
+  video.bgvid {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      min-width:0%;
+      min-height: 0%;
+      width: 100%;
+      height: auto;
+      z-index: 1;
+      -ms-transform: translateX(-50%) translateY(-50%);
+      -moz-transform: translateX(-50%) translateY(-50%);
+      -webkit-transform: translateX(-50%) translateY(-50%);
+      transform: translateX(-50%) translateY(-50%);
+      background-size: cover;
+  }
+  img#map_lastFrame {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      min-width: 0%;
+      min-height: 0%;
+      width: 100%;
+      height: auto;
+      z-index: 1;
+      -ms-transform: translateX(-50%) translateY(-50%);
+      -moz-transform: translateX(-50%) translateY(-50%);
+      -webkit-transform: translateX(-50%) translateY(-50%);
+      transform: translateX(-50%) translateY(-50%);
+  }
 }
