kart i rett format?

--- a/kartlinje/style.css
+++ b/kartlinje/style.css
@@ -200,7 +200,7 @@ video.bgvid {
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
     z-index: 1;
     -ms-transform: translateX(-50%) translateY(-50%);
@@ -218,7 +218,7 @@ img#map_lastFrame {
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
     z-index: 1;
     -ms-transform: translateX(-50%) translateY(-50%);
