--- a/kartlinje/style.css
+++ b/kartlinje/style.css
@@ -179,6 +179,13 @@ img#miniLogo:hover{
   cursor: pointer;
 }
 
+.tooltip{
+	display:inline-block;
+	position:absolute;
+	top:150px;
+	background-color: rgba(255, 255, 255, 0.75);
+}
+
 .leaflet-control-zoom{
   display: none;
 }
