--- a/kartlinje/style.css
+++ b/kartlinje/style.css
@@ -37,6 +37,12 @@ article#bryggen{
     margin: 0;
     padding: 0;
 }
+article#maskineri{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 article#storm{
     width: 100%;
     margin-left: auto;
